// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTargets esmodules can be intersected with a .browserslistrc file 1`] = `
Object {
  "chrome": "70.0.0",
  "firefox": "60.0.0",
}
`;

exports[`getTargets esmodules can be intersected with ios browsers option 1`] = `
Object {
  "ios": "12.0.0",
}
`;

exports[`getTargets esmodules can be intersected with the browsers option 1`] = `
Object {
  "chrome": "70.0.0",
  "firefox": "60.0.0",
}
`;

exports[`getTargets esmodules explicit browser versions have the precedence over 'esmodules' 1`] = `
Object {
  "chrome": "20.0.0",
  "firefox": "70.0.0",
}
`;

exports[`getTargets esmodules returns browser supporting modules and keyed browser overrides 1`] = `
Object {
  "android": "61.0.0",
  "chrome": "61.0.0",
  "edge": "16.0.0",
  "firefox": "60.0.0",
  "ie": "11.0.0",
  "ios": "10.3.0",
  "node": "13.2.0",
  "opera": "48.0.0",
  "opera_mobile": "80.0.0",
  "safari": "10.1.0",
  "samsung": "8.2.0",
}
`;

exports[`getTargets esmodules returns browser supporting modules and keyed browser overrides, ignoring browsers field 1`] = `
Object {
  "android": "61.0.0",
  "chrome": "61.0.0",
  "edge": "16.0.0",
  "firefox": "60.0.0",
  "ie": "11.0.0",
  "ios": "10.3.0",
  "node": "13.2.0",
  "opera": "48.0.0",
  "opera_mobile": "80.0.0",
  "safari": "10.1.0",
  "samsung": "8.2.0",
}
`;

exports[`getTargets esmodules returns browsers supporting modules 1`] = `
Object {
  "android": "61.0.0",
  "chrome": "61.0.0",
  "edge": "16.0.0",
  "firefox": "60.0.0",
  "ios": "10.3.0",
  "node": "13.2.0",
  "opera": "48.0.0",
  "opera_mobile": "80.0.0",
  "safari": "10.1.0",
  "samsung": "8.2.0",
}
`;

exports[`getTargets esmodules returns browsers supporting modules, ignoring browsers key 1`] = `
Object {
  "android": "61.0.0",
  "chrome": "61.0.0",
  "edge": "16.0.0",
  "firefox": "60.0.0",
  "ios": "10.3.0",
  "node": "13.2.0",
  "opera": "48.0.0",
  "opera_mobile": "80.0.0",
  "safari": "10.1.0",
  "samsung": "8.2.0",
}
`;

exports[`getTargets exception throws when version is not a semver 1`] = `"@babel/helper-compilation-targets: 'seventy-two' is not a valid value for 'targets.chrome'."`;
